[tool.poetry]
name = "keylight-cli"
version = "0.1.0"
description = ""
authors = ["Ben Lyall <ben@lyall.me>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
leglight = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[tool.poetry.scripts]
keylight = "keylight_cli.keylight_cli:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
