[tool.poetry]
name = "keylight-cli"
version = "0.1.3"
description = "A Python based CLI to control Elgato Keylights"
authors = ["Ben Lyall <ben@lyall.me>"]
keywords = ["elgato", "keylight", "leglight"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benlyall/keylight-cli"
homepage = "https://github.com/benlyall/keylight-cli"
classifiers = [
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
leglight = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[tool.poetry.scripts]
keylight = "keylight_cli.keylight_cli:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
